crates/sparrow-compiler/tests/snapshots/compiler_golden_tests__valid_time_domains.snap
---
source: sparrow-compiler/tests/compiler_golden_tests.rs
expression: compute_plan
---
per_entity_behavior: 1
operations:
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: sender
                  data_type:
                    kind:
                      Primitive: 10
                - name: amount
                  data_type:
                    kind:
                      Primitive: 13
                - name: receiver
                  data_type:
                    kind:
                      Primitive: 10
                - name: store
                  data_type:
                    kind:
                      Primitive: 10
        output: false
        operator:
          Input:
            producing_operation: 0
            input_column: 0
            interpolation: 1
            column:
              ScanRecord: ~
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Literal:
            literal:
              Float64: 0
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: amount
      - arguments:
          - 0
          - 2
        result_type:
          kind:
            Primitive: 13
        output: true
        operator:
          Instruction: field_ref
      - arguments:
          - 3
          - 1
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gt
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Literal:
            literal:
              Float64: 24
      - arguments:
          - 5
          - 3
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gt
    operator:
      Scan:
        table_id:
          high: 1233317930569911709
          low: 9279388510107214504
        schema:
          fields:
            - name: sender
              data_type:
                kind:
                  Primitive: 10
            - name: amount
              data_type:
                kind:
                  Primitive: 13
            - name: receiver
              data_type:
                kind:
                  Primitive: 10
            - name: store
              data_type:
                kind:
                  Primitive: 10
        slice_plan:
          table_name: Sent
          slice: ~
  - expressions:
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 0
            input_column: 3
            interpolation: 1
            column:
              ProducerExpression: 3
    operator:
      ShiftUntil:
        input: 0
        condition:
          producing_operation: 0
          input_column: 4
          interpolation: 1
          column:
            ProducerExpression: 4
  - expressions:
      - arguments: []
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Input:
            producing_operation: 0
            input_column: 5
            interpolation: 1
            column:
              ProducerExpression: 6
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 1
            input_column: 3
            interpolation: 1
            column:
              ProducerExpression: 0
    operator:
      Merge:
        left: 0
        right: 1
  - expressions:
      - arguments: []
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          LateBound: 1
      - arguments: []
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Input:
            producing_operation: 2
            input_column: 4
            interpolation: 1
            column:
              ProducerExpression: 1
      - arguments:
          - 1
          - 1
        result_type:
          kind:
            Primitive: 13
        output: false
        operator:
          Instruction: add
      - arguments: []
        result_type:
          kind:
            Primitive: 14
        output: false
        operator:
          Literal:
            literal:
              Utf8: a
      - arguments:
          - 3
          - 2
        result_type:
          kind:
            Struct:
              fields:
                - name: a
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Instruction: record
      - arguments:
          - 4
        result_type:
          kind:
            Primitive: 24
        output: false
        operator:
          Instruction: time_of
      - arguments:
          - 5
          - 0
        result_type:
          kind:
            Primitive: 2
        output: true
        operator:
          Instruction: gte
    operator:
      ShiftUntil:
        input: 2
        condition:
          producing_operation: 2
          input_column: 3
          interpolation: 1
          column:
            ProducerExpression: 0
  - expressions:
      - arguments: []
        result_type:
          kind:
            Struct:
              fields:
                - name: a
                  data_type:
                    kind:
                      Primitive: 13
        output: true
        operator:
          Input:
            producing_operation: 3
            input_column: 3
            interpolation: 1
            column:
              ProducerExpression: 4
    operator:
      Select:
        input: 3
        condition:
          producing_operation: 3
          input_column: 4
          interpolation: 1
          column:
            ProducerExpression: 6
primary_grouping: account
primary_grouping_key_type:
  kind:
    Primitive: 10

